# megaApp

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
src/logger/: logger.cpp  logger.h  loggerConfig.h
src/models/: taskModel.h  taskParams.h  workerModel.h  workerStatus.cpp  workerStatus.h
src/utils/: errorMsg.cpp  errorMsg.h  utils.cpp  utils.h
tests/: testLogger.cpp  testLogger.h  testWorkerXor.cpp  testWorkerXor.h
ui/: mainwindow.ui
